fixed issue that caused layout shift after clicking theme toggle

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,3 +98,15 @@
     text-wrap: balance;
   }
 }
+
+body.__className_36bd41[data-scroll-locked="1"] {
+  overflow: auto !important;
+  overscroll-behavior: auto !important; /*scroll?*/
+  position: relative !important;
+  padding-left: 2rem !important;
+  padding-top: 0px !important;
+  padding-right: 2rem !important;
+  margin-left: auto !important;
+  margin-top: 0 !important;
+  margin-right: auto !important;
+}
